--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HeartShare - Join Our Community</title>
+    <title>UjamaaFlow</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
         * {
@@ -440,7 +440,7 @@
 
         <div class="form-section">
             <div class="logo">
-                <h1>HeartShare</h1>
+                <h1>UjamaaFlow</h1>
                 <p>Building bridges of compassion</p>
             </div>
 
